force-app/main/default/objects/Case/fields/Account_Minor_Commodity__c.field-meta.xml
<CustomField>
    <fullName>Account_Minor_Commodity__c</fullName>
    <formula>IF( Account.RecordType.DeveloperName == &#39;NS_OnlineCustomerCorporate&#39;,TEXT(Account.NS_Minor_Commodity__c),TEXT( Account.Parent.NS_Minor_Commodity__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Minor Commodity associated to the parent account</inlineHelpText>
    <label>Account Minor Commodity</label>
    <type>Text</type>
</CustomField>