force-app/main/default/objects/Case/fields/Account_Name_Report__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Report__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name (Report)</label>
    <type>Text</type>
</CustomField>