force-app/main/default/objects/Case/fields/Case_Request__c.field-meta.xml
<CustomField>
    <fullName>Case_Request__c</fullName>
    <description>Used for Child Case</description>
    <label>Case Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>