force-app/main/default/objects/Case/fields/Case_Update_External__c.field-meta.xml
<CustomField>
    <fullName>Case_Update_External__c</fullName>
    <description>This field contains cumulative external comments (from new_external_Comment__c field). Is populated via workflow. Should be read only on the page layouts. Created as per Case Update (External) Field For TRAX</description>
    <inlineHelpText>This field is for external facing customer updates for the Trax application. You can write to this field in the “Case Update (External)” option in the Activity &amp; Chatter Panel. Click &quot;More&quot; if the option is not visible.</inlineHelpText>
    <label>Case Update  (External)</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>