force-app/main/default/objects/Case/fields/Email_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This holds the status of Email Notification.</description>
    <label>Email Notification Sent</label>
    <type>Checkbox</type>
</CustomField>