force-app/main/default/objects/Case/fields/ETAForLoadAdjustment__c.field-meta.xml
<CustomField>
    <fullName>ETAForLoadAdjustment__c</fullName>
    <label>ETA for Load Adjustment</label>
    <type>DateTime</type>
</CustomField>