force-app/main/default/objects/Case/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Driver Concerns</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>M&amp;R</fullName>
            </value>
            <value>
                <fullName>Terminal Conditions</fullName>
            </value>
            <value>
                <fullName>Systems/Data</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>