force-app/main/default/objects/Case/fields/Forwarding_Emails__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Emails__c</fullName>
    <label>Forwarding Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>