force-app/main/default/objects/Case/fields/New_External_Comment__c.field-meta.xml
<CustomField>
    <fullName>New_External_Comment__c</fullName>
    <description>This field will store the new external comment. Will be appended to Case Update (External) field. Created as per enhancement - Case Update (External) Field For TRAX</description>
    <inlineHelpText>New Customer Update (External)</inlineHelpText>
    <label>Case Update (External)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>