force-app/main/default/objects/Case/fields/NS_AccountAddress__c.field-meta.xml
<CustomField>
    <fullName>NS_AccountAddress__c</fullName>
    <description>This field relates to Account&#39;s Address and populates it on Case record detail</description>
    <formula>Account.NS_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>