force-app/main/default/objects/Case/fields/NS_AccountMarketingOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>NS_AccountMarketingOwnerEmail__c</fullName>
    <description>It captures the email id of Associated Account&#39;s marketing owner.</description>
    <label>Account Marketing Owner Email</label>
    <type>Email</type>
</CustomField>