force-app/main/default/objects/Case/fields/NS_AccountPhone__c.field-meta.xml
<CustomField>
    <fullName>NS_AccountPhone__c</fullName>
    <description>This field relates to Account&#39;s Phone  and populates it on Case record detail</description>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Phone</label>
    <type>Text</type>
</CustomField>