force-app/main/default/objects/Case/fields/NS_AccountType__c.field-meta.xml
<CustomField>
    <fullName>NS_AccountType__c</fullName>
    <description>This field relates type of an Account  and populates it on Case record detail</description>
    <formula>Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>