force-app/main/default/objects/Case/fields/NS_Action__c.field-meta.xml
<CustomField>
    <fullName>NS_Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NS_InteractionReason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Extension_Request</fullName>
                <label>Extension Request</label>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>