force-app/main/default/objects/Case/fields/NS_AgentBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>NS_AgentBusinessUnit__c</fullName>
    <description>This Business Unit captures the Agent Business Unit(Assigned To field)</description>
    <formula>TEXT(NS_AssignedTo__r.Associated_Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Assigned To User Business Unit</inlineHelpText>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>