force-app/main/default/objects/Case/fields/NS_AllowableWeightForDispatch__c.field-meta.xml
<CustomField>
    <fullName>NS_AllowableWeightForDispatch__c</fullName>
    <description>This field gives the allowed weight of the product that needs to be dispatched</description>
    <label>Allowable Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>