force-app/main/default/objects/Case/fields/NS_AncillaryChargesProtected__c.field-meta.xml
<CustomField>
    <fullName>NS_AncillaryChargesProtected__c</fullName>
    <label>Ancillary Charges Protected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>