force-app/main/default/objects/Case/fields/NS_AncillaryChargesProtected_OLD__c.field-meta.xml
<CustomField>
    <fullName>NS_AncillaryChargesProtected_OLD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ancillary Charges Protected</label>
    <type>Checkbox</type>
</CustomField>