force-app/main/default/objects/Case/fields/NS_AssignedId__c.field-meta.xml
<CustomField>
    <fullName>NS_AssignedId__c</fullName>
    <description>It checks if Case is assigned to the logged in User.</description>
    <formula>IF($User.Id== NS_AssignedTo__r.Id, &quot;true&quot;,&quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AssignedId</label>
    <type>Text</type>
</CustomField>