force-app/main/default/objects/Case/fields/NS_AVPLDays__c.field-meta.xml
<CustomField>
    <fullName>NS_AVPLDays__c</fullName>
    <description>Field created as part of Phase 1 enhancement.</description>
    <inlineHelpText>Value should range from 0 to 999</inlineHelpText>
    <label>AVPL Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>