force-app/main/default/objects/Case/fields/NS_BADOLocation__c.field-meta.xml
<CustomField>
    <fullName>NS_BADOLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BADO Location</label>
    <referenceTo>NS_ServiceStations__c</referenceTo>
    <relationshipLabel>Cases (BADO Location)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>