force-app/main/default/objects/Case/fields/NS_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Case_ID__c</fullName>
    <description>Case ID field for Voice of Customer</description>
    <formula>Id</formula>
    <label>Case ID Formula</label>
    <type>Text</type>
</CustomField>