force-app/main/default/objects/Case/fields/NS_Case_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>NS_Case_Owner_Email__c</fullName>
    <description>It captures the email id of the case owner queue</description>
    <formula>Owner:Queue.QueueEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS Case Owner Email</label>
    <type>Text</type>
</CustomField>