force-app/main/default/objects/Case/fields/NS_Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Case_Owner_Name__c</fullName>
    <label>NS Case Owner Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>