force-app/main/default/objects/Case/fields/NS_Case_Resolution_Internal__c.field-meta.xml
<CustomField>
    <fullName>NS_Case_Resolution_Internal__c</fullName>
    <description>Built as part of Phase 1 enhancement</description>
    <label>Case Resolution (Internal)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>