force-app/main/default/objects/Case/fields/NS_CaseAge__c.field-meta.xml
<CustomField>
    <fullName>NS_CaseAge__c</fullName>
    <description>It is the number of days  a Case is in opened status</description>
    <formula>IF(IsClosed,(ClosedDate-CreatedDate),(now()- CreatedDate))</formula>
    <inlineHelpText>What is the total number of days that a Case has been open?</inlineHelpText>
    <label>Total Days Open</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>