force-app/main/default/objects/Case/fields/NS_CaseAgeInHours__c.field-meta.xml
<CustomField>
    <fullName>NS_CaseAgeInHours__c</fullName>
    <description>Captures hours a Case if it is in open state.</description>
    <formula>(NOW()-CreatedDate) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age In Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>