force-app/main/default/objects/Case/fields/NS_CaseBU__c.field-meta.xml
<CustomField>
    <fullName>NS_CaseBU__c</fullName>
    <description>It populates Case&#39;s Business Unit from Case Owner Queue.</description>
    <formula>IF(CONTAINS(Owner:Queue.QueueName,&#39;Automotive&#39;),&#39;Automotive&#39;,IF(CONTAINS(Owner:Queue.QueueName,&#39;UTS&#39;), &#39;Unit Train&#39;, IF(CONTAINS(Owner:Queue.QueueName,&#39;EP&#39;),&#39;Equipment Planning&#39;,&#39;OSS&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case BU</label>
    <type>Text</type>
</CustomField>