force-app/main/default/objects/Case/fields/NS_CaseBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>NS_CaseBusinessUnit__c</fullName>
    <description>It captures the business unit of a Case.</description>
    <label>Case Business Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>