force-app/main/default/objects/Case/fields/NS_CaseCreationHours__c.field-meta.xml
<CustomField>
    <fullName>NS_CaseCreationHours__c</fullName>
    <description>TO BE POPULATED</description>
    <label>Case Creation Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>