force-app/main/default/objects/Case/fields/NS_caseFollowUp__c.field-meta.xml
<CustomField>
    <fullName>NS_caseFollowUp__c</fullName>
    <label>Please tell us why so we can follow-up</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>