force-app/main/default/objects/Case/fields/NS_CaseInitiatingParty__c.field-meta.xml
<CustomField>
    <fullName>NS_CaseInitiatingParty__c</fullName>
    <label>Case Initiating Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer-Initiated</fullName>
            </value>
            <value>
                <fullName>Norfolk Southern-Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>