force-app/main/default/objects/Case/fields/NS_caseIssue__c.field-meta.xml
<CustomField>
    <fullName>NS_caseIssue__c</fullName>
    <label>Have we resolved your issue?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>