force-app/main/default/objects/Case/fields/NS_caseResolutionEase__c.field-meta.xml
<CustomField>
    <fullName>NS_caseResolutionEase__c</fullName>
    <label>Please tell us why (Resolution Ease)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>