force-app/main/default/objects/Case/fields/NS_caseResolve__c.field-meta.xml
<CustomField>
    <fullName>NS_caseResolve__c</fullName>
    <label>NS made it easy for me to resolve issue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>