force-app/main/default/objects/Case/fields/NS_CaseStatusCheck__c.field-meta.xml
<CustomField>
    <fullName>NS_CaseStatusCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NS_CaseStatusCheck</label>
    <type>Checkbox</type>
</CustomField>