force-app/main/default/objects/Case/fields/NS_caseSurvey__c.field-meta.xml
<CustomField>
    <fullName>NS_caseSurvey__c</fullName>
    <label>Survey Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>