force-app/main/default/objects/Case/fields/NS_caseSurveyTime__c.field-meta.xml
<CustomField>
    <fullName>NS_caseSurveyTime__c</fullName>
    <label>Survey Submitted Time</label>
    <type>DateTime</type>
</CustomField>