force-app/main/default/objects/Case/fields/NS_CaseToBeDeleted__c.field-meta.xml
<CustomField>
    <fullName>NS_CaseToBeDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability for an agent to flag that a case needs to be deleted (by the case owner) and include the reason for deletion.</description>
    <label>Request Delete</label>
    <type>Checkbox</type>
</CustomField>