force-app/main/default/objects/Case/fields/NS_CashCustomer__c.field-meta.xml
<CustomField>
    <fullName>NS_CashCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Customer</label>
    <type>Checkbox</type>
</CustomField>