force-app/main/default/objects/Case/fields/NS_ClaimNo__c.field-meta.xml
<CustomField>
    <fullName>NS_ClaimNo__c</fullName>
    <label>Claim No</label>
    <length>8</length>
    <type>Text</type>
</CustomField>