force-app/main/default/objects/Case/fields/NS_ClassCode__c.field-meta.xml
<CustomField>
    <fullName>NS_ClassCode__c</fullName>
    <description>It pulls Class Code from Account used in Email Template, Page Layout and Reports.</description>
    <formula>Account.NS_ClassCode__c</formula>
    <label>Class Code</label>
    <type>Text</type>
</CustomField>