force-app/main/default/objects/Case/fields/NS_ClassCodeUpdated__c.field-meta.xml
<CustomField>
    <fullName>NS_ClassCodeUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Case classification, Load moving as empty, rejects and Way billing Case Layout.</description>
    <label>Class Code Updated</label>
    <type>Checkbox</type>
</CustomField>