force-app/main/default/objects/Case/fields/NS_ClearanceReleasedDate__c.field-meta.xml
<CustomField>
    <fullName>NS_ClearanceReleasedDate__c</fullName>
    <label>Clearance Released Date</label>
    <type>Date</type>
</CustomField>