force-app/main/default/objects/Case/fields/NS_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>NS_Closed_By__c</fullName>
    <description>Name of user who closed the case.</description>
    <label>Closed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>