force-app/main/default/objects/Case/fields/NS_ClosedCaseInboundEmail__c.field-meta.xml
<CustomField>
    <fullName>NS_ClosedCaseInboundEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Case Inbound Email</label>
    <type>Checkbox</type>
</CustomField>