force-app/main/default/objects/Case/fields/NS_CoCRequested__c.field-meta.xml
<CustomField>
    <fullName>NS_CoCRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CoC Requested</label>
    <type>Checkbox</type>
</CustomField>