force-app/main/default/objects/Case/fields/NS_Commodity__c.field-meta.xml
<CustomField>
    <fullName>NS_Commodity__c</fullName>
    <label>Commodity/STCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>