force-app/main/default/objects/Case/fields/NS_Computer_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Computer_Name__c</fullName>
    <description>Built as part of Phase 1 enhancement</description>
    <label>Computer Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>