force-app/main/default/objects/Case/fields/NS_ConsigneeContactName__c.field-meta.xml
<CustomField>
    <fullName>NS_ConsigneeContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consignee Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact should be Active</errorMessage>
        <filterItems>
            <field>Contact.NS_ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Consignee Contact Name)</relationshipLabel>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>