force-app/main/default/objects/Case/fields/NS_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Contact_First_Name__c</fullName>
    <formula>Contact.FirstName</formula>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>