force-app/main/default/objects/Case/fields/NS_Contact_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>NS_Contact_ID_Formula__c</fullName>
    <description>Case Contact id field for Voice of Customer</description>
    <formula>ContactId</formula>
    <label>Contact ID Formula</label>
    <type>Text</type>
</CustomField>