force-app/main/default/objects/Case/fields/NS_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Contact_Last_Name__c</fullName>
    <formula>Contact.LastName</formula>
    <label>Contact Last Name</label>
    <type>Text</type>
</CustomField>