force-app/main/default/objects/Case/fields/NS_ContractorAssigned__c.field-meta.xml
<CustomField>
    <fullName>NS_ContractorAssigned__c</fullName>
    <label>Contractor Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>