force-app/main/default/objects/Case/fields/NS_Controlling_Station__c.field-meta.xml
<CustomField>
    <fullName>NS_Controlling_Station__c</fullName>
    <description>It pulls Controlling Station from Account and used in Dashboard,Emails,Layouts and Reports.</description>
    <formula>Account.NS_OperatingStation__r.NS_ControllingStationCode__c &amp; 
if( 
OR( 
ISBLANK(Account.NS_OperatingStation__r.NS_ControllingStationCode__c ),ISBLANK(Account.NS_OperatingStation__r.NS_ControllingStationName__c) 
) ,&#39;&#39;,&#39;-&#39;) &amp; 
Account.NS_OperatingStation__r.NS_ControllingStationName__c</formula>
    <label>Controlling Station</label>
    <type>Text</type>
</CustomField>