force-app/main/default/objects/Case/fields/NS_CorrectedAmount__c.field-meta.xml
<CustomField>
    <fullName>NS_CorrectedAmount__c</fullName>
    <label>Corrected Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>