force-app/main/default/objects/Case/fields/NS_CorrectiveAction__c.field-meta.xml
<CustomField>
    <fullName>NS_CorrectiveAction__c</fullName>
    <label>Corrective Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>