force-app/main/default/objects/Case/fields/NS_Counter_Activity__c.field-meta.xml
<CustomField>
    <fullName>NS_Counter_Activity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of &gt;24 hours between updates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>