force-app/main/default/objects/Case/fields/NS_Created_By_Queue__c.field-meta.xml
<CustomField>
    <fullName>NS_Created_By_Queue__c</fullName>
    <label>Created By Queue</label>
    <length>60</length>
    <type>Text</type>
</CustomField>