force-app/main/default/objects/Case/fields/NS_Created_using_Quick_Case__c.field-meta.xml
<CustomField>
    <fullName>NS_Created_using_Quick_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To distinguish the Cases which had been created using Quick Case.</description>
    <label>Created using Quick Case</label>
    <type>Checkbox</type>
</CustomField>