force-app/main/default/objects/Case/fields/NS_CreatedFromClonning__c.field-meta.xml
<CustomField>
    <fullName>NS_CreatedFromClonning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as alternative for isclone. This checkbox is checked automatically when a Case is cloned.</description>
    <label>CreatedFromClonning</label>
    <type>Checkbox</type>
</CustomField>