force-app/main/default/objects/Case/fields/NS_Crew_Location__c.field-meta.xml
<CustomField>
    <fullName>NS_Crew_Location__c</fullName>
    <formula>IF(ISBLANK(NS_Field_Location__c),&quot;&quot;,NS_Field_Location__r.NS_OperatingStationCity__c&amp;&quot;, &quot;&amp;NS_Field_Location__r.NS_OperatingStationState__c)</formula>
    <label>Crew Location</label>
    <type>Text</type>
</CustomField>