force-app/main/default/objects/Case/fields/NS_CurrentLocation__c.field-meta.xml
<CustomField>
    <fullName>NS_CurrentLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>As per Phase 1 implementation, Current Location is a lookup to Account. Since changing the lookup will result into data loss, creating this new field. This is yet to be finalized.</description>
    <label>Current Location</label>
    <referenceTo>NS_ServiceStations__c</referenceTo>
    <relationshipLabel>Cases (Current Location New)</relationshipLabel>
    <relationshipName>CurrentLocation</relationshipName>
    <type>Lookup</type>
</CustomField>