force-app/main/default/objects/Case/fields/NS_CurrentLocation_OLD__c.field-meta.xml
<CustomField>
    <fullName>NS_CurrentLocation_OLD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>NS Field Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Current Location)</relationshipLabel>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>