force-app/main/default/objects/Case/fields/NS_CustomerContactNotifiedOfResolution__c.field-meta.xml
<CustomField>
    <fullName>NS_CustomerContactNotifiedOfResolution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field notifies the Contact Customer once the Case is resolved</description>
    <label>Customer Contact Notified</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact should be Active</errorMessage>
        <filterItems>
            <field>Contact.NS_ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Customer Contact Notified of Resolution)</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>