force-app/main/default/objects/Case/fields/NS_CustomerNotifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>NS_CustomerNotifiedDateTime__c</fullName>
    <description>This field captures the Date/Time of a customer notified</description>
    <label>Date Customer Notified</label>
    <type>DateTime</type>
</CustomField>