force-app/main/default/objects/Case/fields/NS_DateBillingRestored__c.field-meta.xml
<CustomField>
    <fullName>NS_DateBillingRestored__c</fullName>
    <description>this field captures the billing date</description>
    <label>Billing Restored</label>
    <type>Date</type>
</CustomField>