force-app/main/default/objects/Case/fields/NS_DateOfShutdown__c.field-meta.xml
<CustomField>
    <fullName>NS_DateOfShutdown__c</fullName>
    <label>Shutdown</label>
    <type>DateTime</type>
</CustomField>