force-app/main/default/objects/Case/fields/NS_DatePaymentReceived__c.field-meta.xml
<CustomField>
    <fullName>NS_DatePaymentReceived__c</fullName>
    <label>Payment Received</label>
    <type>Date</type>
</CustomField>