force-app/main/default/objects/Case/fields/NS_DateSwitchNeeded__c.field-meta.xml
<CustomField>
    <fullName>NS_DateSwitchNeeded__c</fullName>
    <label>Date Switch Needed</label>
    <type>Date</type>
</CustomField>